[gd_scene load_steps=5 format=3 uid="uid://b2cnrnn2niynn"]

[ext_resource type="Script" path="res://Scripts/Components/analyzer.gd" id="1_eqp57"]
[ext_resource type="Texture2D" uid="uid://dnm053u7gc81t" path="res://Ressources/Sprite/Building/Buildinng Sprite Rework/border_0.png" id="3_u6d8e"]
[ext_resource type="Texture2D" uid="uid://b8no10bixk7vl" path="res://Ressources/Sprite/Building/Buildinng Sprite Rework/analyser_background.png" id="4_4bfcp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_k1iw7"]
radius = 33.0792

[node name="Analyzer" type="Area2D" groups=["building", "selectable"]]
texture_filter = 1
scale = Vector2(1.3, 1.3)
script = ExtResource("1_eqp57")

[node name="AnalyzerBorder" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -1
scale = Vector2(2, 2)
texture = ExtResource("3_u6d8e")

[node name="AnalyzerSprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("4_4bfcp")

[node name="AnalyzerCollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
scale = Vector2(2, 2)
shape = SubResource("CircleShape2D_k1iw7")

[node name="AnalyzerButtonContainer" type="HBoxContainer" parent="."]
offset_left = -33.8462
offset_top = 53.8462
offset_right = 34.1538
offset_bottom = 85.8462

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
